--- a/assets/css/xanhla.css
+++ b/assets/css/xanhla.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @font-face {
   font-display: swap;
   font-family: script-font;
@@ -796,8 +797,10 @@ body {
 .thankyou-body {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  position: absolute;
+  top: 10%;
+  left: 2%;
+  max-width: 40%;
 }
 .thankyou-bg {
   position: absolute;
@@ -810,10 +813,16 @@ body {
   font-size: 64px;
   font-family: var(--script-font);
   line-height: 1.6;
+  text-shadow: 2px 2px 5px #353535;
 }
 .thankyou-des {
-  text-align: center;
-  margin-bottom: 40px;
+  text-align: left;
+  padding: 20px;
+  margin:  20px 0;
+  color: #FFF;
+  text-shadow: 2px 2px 5px #353535;
+  font-family: "Montserrat", serif;
+  font-size: 18px;
 }
 @media only screen and (min-width: 640px) {
   .main-about {
