--- a/assets/css/xanhla.css
+++ b/assets/css/xanhla.css
@@ -120,7 +120,7 @@ html {
   max-width: var(--max-width);
   margin: 0 auto;
   position: relative;
-  margin-top: 80px;
+  margin-top: 40px;
   margin-bottom: 40px;
 }
 .section-heading img {
@@ -452,18 +452,19 @@ body {
   position: absolute;
   top: 0;
   right: -32px;
+  max-width: 100px;
 }
 .bg-right {
   position: absolute;
   top: 40%;
-  right: -50px;
-  max-width: 200px;
+  right: -30px;
+  max-width: 100px;
 }
 .bg-bottom-left {
   position: absolute;
-  bottom: 0;
-  left: -120px;
-  max-width: 280px;
+    top: 40%;
+    left: -60px;
+    max-width: 140px;
 }
 .leaf-1 {
   position: absolute;
@@ -565,8 +566,8 @@ body {
   position: relative;
   display: grid;
   justify-content: center;
-  padding: 120px 0;
-  margin-top: 80px;
+  padding: 80px 0;
+  margin-top: 0px;
   color: var(--text-white);
   z-index: 9;
 }
@@ -813,14 +814,14 @@ body {
   font-size: 64px;
   font-family: var(--script-font);
   line-height: 1.6;
-  text-shadow: 2px 2px 5px #353535;
+  text-shadow: 2px 2px 10px #353535;
 }
 .thankyou-des {
   text-align: left;
   padding: 20px;
   margin:  20px 0;
   color: #FFF;
-  text-shadow: 2px 2px 5px #353535;
+  text-shadow: 2px 2px 8px #353535;
   font-family: "Montserrat", serif;
   font-size: 18px;
 }
@@ -837,7 +838,14 @@ body {
   }
   .bg-bottom-left,
   .bg-top-right {
-    max-width: 60%;
+    max-width: 40%;
+   left: -120px;
+  }
+  .bg-top {
+    max-width: 180px;
+  }
+  .bg-right {
+    max-width: 180px;
   }
 }
 @media only screen and (min-width: 48em) {
@@ -897,5 +905,20 @@ body {
   }
   .section-title {
     font-size: 44px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .thankyou-title {
+    font-size: 56px;
+  }
+  .thankyou-des {
+    padding: 10px;
+    margin:  10px 0;
+    font-size: 16px;
+  }
+  .leaf-1,
+  .leaf-2{
+    display: none;
   }
 }
