--- a/assets/css/wedding.css
+++ b/assets/css/wedding.css
@@ -41,12 +41,12 @@
   gap: 8px;
 }
 .input {
-  border: 1px solid var(--primary-color);
+  border: 1px solid var(--main-color);
   padding: 8px 20px;
   border-radius: 6px;
 }
 .input-text {
-  border: 1px solid var(--primary-color);
+  border: 1px solid var(--main-color);
   padding: 8px 20px;
   border-radius: 6px;
 }
@@ -70,13 +70,17 @@
   row-gap: 40px;
   color: var(--text-white);
 }
+.list_message:not(.message-item){
+  display:none;
+}
 .list_message {
   max-width: 90%;
   display: grid;
-  row-gap: 40px;
-  padding: 0 20px;
+  row-gap: 20px;
   overflow-y: auto;
-  max-height: 500px;
+  max-height: 900px;
+  padding: 20px;
+  background: #efdee1;
 }
 .list_message::-webkit-scrollbar {
   width: 10px;
@@ -116,32 +120,38 @@
   gap: 8px;
   align-items: center;
 }
+.messeger-body {
+  color: #606060;
+  font-size: 12px;
+}
 .form-message {
   display: grid;
   padding: clamp(20px, 20px + 1vw, 40px);
   justify-items: center;
   text-align: center;
-  border: 1px solid var(--primary-color);
-  background-color: var(--bg);
+  border: 1px solid var(--main-color);
   border-radius: 12px;
   max-width: 100%;
+
+  color: var(--main-color);
+  background-color: #efdee1;
 }
 .form-message form {
   display: grid;
   row-gap: 20px;
   margin-top: 4px;
-  color: var(--primary-color);
+  color: var(--main-color);
 }
 .form-title {
   font-size: 24px;
-  color: var(--primary-color);
+  color:var(--main-color);
 }
 .form {
   background-color: #fff;
   padding: 80px 0;
 }
 .form .section-title {
-  color: var(--primary-color);
+  color:var(--main-color);
 }
 #form-wedding {
   width: 680px;
