--- a/assets/css/xanhla.css
+++ b/assets/css/xanhla.css
@@ -129,8 +129,12 @@ html {
   max-width: 20vw;
 }
 .section-title {
-  font-size: 20px;
+  font-size: 18px;
   font-family: var(--title-font);
+}
+.section-title1 {
+  font-size: 14px;
+  font-family: Montserrat;
 }
 .group-button {
   display: flex;
@@ -154,10 +158,10 @@ a.uk-link-text:hover {
   text-decoration: underline;
 }
 .btn-primary {
-  background-color: var(--primary-color);
+  background-color: var(--main-color);
   color: var(--text-white);
   padding: 10px 24px;
-  border-radius: 12px;
+  border-radius: 6px;
 }
 .btn i {
   font-size: 24px;
@@ -748,7 +752,6 @@ body {
   align-items: center;
 }
 .invitation-container {
-  margin-top: 40px;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -762,12 +765,14 @@ body {
   align-items: center;
   padding: 20px;
   gap: 12px;
-  background-color: #a2525f30;
-  color: var(--main-color);
   border-radius: 12px;
   max-width: 100%;
   width: 100%;
   text-align: center;
+  background-color: #a2525f30;
+  color: var(--main-color);
+
+
 }
 .invitation-card img {
   max-width: 120px;
