--- a/assets/css/xanhla.css
+++ b/assets/css/xanhla.css
@@ -1096,3 +1096,24 @@ body {
 @media (min-width: 480px) {
   .album-item:nth-child(4) { grid-column: span 2; grid-row: span 1;  height: 300px; }
 }
+#footerr {
+  background-color: #99c085;
+  text-align: center;
+  padding: 10px 0;
+  font-size: 14px;
+  color: white;
+}
+
+#footerr a {
+  text-decoration: none;
+  transition: color 0.3s, text-decoration 0.3s;
+}
+
+#footerr a:hover {
+  color: #a2525f;
+  text-decoration: underline;
+}
+
+#footerr a:active {
+  color: #555;
+}
